# fibercryptowallet-qt

./: CMakeLists.txt  CONTRIBUTING.md  README.md
android/: AndroidManifest.xml
resources/fonts/: fonts.qrc
resources/i18n/: translations.qrc
resources/images/: images.qrc
src/: main.cpp
src/core/WalletCreator/: walletcreator.cpp  walletcreator.h
src/core/WalletManager/: walletmanager.cpp  walletmanager.h
src/models/Template/: templatemodel.cpp  templatemodel.h
src/models/Wallet/: address.cpp  address.h  addressmodel.cpp  addressmodel.h  wallet.cpp  wallet.h  walletmodel.cpp  walletmodel.h
src/ui/: ui.qrc
src/ui/qml/: main.qml  splash.qml
src/ui/qml/Components/: ApplicationWindowContent.qml
src/ui/qml/Components/Controls/: ScrollBar.qml  TextArea.qml  TextField.qml  _README.txt
src/ui/qml/Components/Controls/+Material/: ComboBox.qml  RadioButton.qml  RadioIndicator.qml  ScrollBar.qml  TextArea.qml  TextField.qml
src/ui/qml/Components/Custom/: CustomCheckIndicator.qml  CustomComboBoxPopupFilter.qml  CustomMenuBar.qml  CustomMenuItem.qml  CustomScrollBar.qml  CustomSwitch.qml
src/ui/qml/Components/Delegates/: DelegateDestinationList.qml  DelegateHistoryFilter.qml  DelegateHistoryFilterAddress.qml  DelegateHistoryList.qml  DelegateInputOutput.qml  DelegateTransactionAddress.qml  DelegateWallet.qml  DelegateWalletAddress.qml
src/ui/qml/Components/Dialogs/: DialogAbout.qml  DialogAboutLicense.qml  DialogAboutQt.qml  DialogAddWallet.qml  DialogConfirmSeed.qml  DialogQrCode.qml  DialogSelectAddressByWallet.qml  DialogSendTransaction.qml  DialogSimpleInput.qml  DialogTransactionDetails.qml
src/ui/qml/Components/Dialogs/DialogContent/: ContentAbout.qml  ContentAboutLicense.qml  ContentAboutQt.qml  ContentAddWallet.qml  ContentSimpleInput.qml  ContentTransactionDetails.qml
src/ui/qml/Components/Pages/: PageCreateWallet.qml  PageHistory.qml  PageOverview.qml  PagePreferences.qml  PageSend.qml  PageSendAdvanced.qml  PageSendSimple.qml  PageTest.qml  PageWallets.qml  PageWelcome.qml
src/ui/qml/Components/Pages/History/: PageHistory.qml  PageHistoryFilter.qml
src/ui/qml/Components/Pages/Send/: PageSend.qml  PageSendAdvanced.qml  PageSendSimple.qml
src/ui/qml/Components/Pages/Wallets/: PageCreateWallet.qml  PageWallets.qml
src/ui/qml/Components/Utils/: PasswordRequester.qml  SeedGenerator.qml
